Feat: done desktop, to do scss and mobile version

--- a/index.html
+++ b/index.html
@@ -7,81 +7,147 @@
 
 </head>
 <link rel="stylesheet" href="style.css">
+<link rel="preconnect" href="https://fonts.googleapis.com">
+<link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
+<link href="https://fonts.googleapis.com/css2?family=Open+Sans:wght@300;400;600;700&display=swap" rel="stylesheet">
 
 <body>
     <nav>
-        <h1>Hello</h1>
-        <ul>
-            <li class="dropdown">
-                <a href="#" class="dropbtn">About</a>
-                <div class="dropdown-content">
-                    <a href="#">Team</a>
-                    <a href="#">Idea</a>
-                    <a href="#">Mission</a>
-                    <a href="#">Support</a>
-                  </div>
-            </li>
-            <li><a href="#news">Trips</a></li>
-            <li class="dropdown">
-              <a href="#" class="dropbtn">Gallery</a>
-              <div class="dropdown-content">
-                <a href="#">Iceland</a>
-                <a href="#">Norway</a>
-                <a href="#">Arctica</a>
-                <a href="#">Alaska</a>
-              </div>
-            </li>
-            <li><a href="#">Blog</a></li>
-          </ul>
+        <div>
+            <h1>Grass Studio</h1>
+        </div>
+        <div>
+            <ul>
+                <li class="dropdown">
+                    <a href="#" class="dropbtn">About</a>
+                    <div class="dropdown-content dropdown-about">
+                        <a href="#">Team</a>
+                        <a href="#">Idea</a>
+                        <a href="#">Mission</a>
+                        <a href="#">Support</a>
+                    </div>
+                </li>
+                <li><a href="#">Trips</a></li>
+                <li class="dropdown">
+                    <a href="#" class="dropbtn">Gallery</a>
+                    <div class="dropdown-content dropdown-gallery">
+                        <a href="#">Iceland</a>
+                        <a href="#">Norway</a>
+                        <a href="#">Arctica</a>
+                        <a href="#">Alaska</a>
+                    </div>
+                </li>
+                <li><a href="#">Blog</a></li>
+            </ul>
+        </div>
     </nav>
-    <section class="first-section container">
-        <h1>Hello</h1>
+    <section class="header">
+        <div></div>
+        <div>
+            <h1>Outdoor<br /> Photography<br /> is a Journey</h1>
+            <div>
+                <p>
+                    We spend ehree months<br /> exploring Iceland
+                </p>
+                <button>CHECK IT</button>
+            </div>
+        </div>
+    </section>
+    <section class="second-section">
+        <h1>Section title</h1>
+        <div class="second-section-txt-box">
+            <div>
+                <p>
+                    Nulla facilisi. Duis aliquet egestas purus in blandit. Curabitur vulputate , ligula lacinia
+                    celerisque tempor, lacus lacus ornare ante. Ac egestas est urna sit amet arcu. consequat posuere.
+                    Vestibulum ante ipsum primis in faucibus orci luctus et ultrices posuere. Nulla facilisi. Duis
+                    aliquet egestas purus in blandit. Curabitur vulputate , ligula lacinia celerisque tempor, lacus
+                    lacus.
+                </p>
+            </div>
+            <div>
+                <p>
+                    Nulla facilisi. Duis aliquet egestas purus in blandit. Curabitur vulputate, ligula lacinia
+                    celerisque tempor, lacus lacus ornare ante. Egestas est urna sit amet arcu. consequat posuere.
+                    Vestibulum ante ipsum primis in faucibus orci luctus et ultrices posuere. Nulla facilisi. Duis
+                    aliquet egestas purus in blandit. Curabitur vulputate , ligula lacinia celerisque tempor, lacus.
+                    rnare ante.
+                </p>
+            </div>
+        </div>
+    </section>
+    <section class="third-section">
+        <h1>Another title</h1>
+        <div class="third-section-photo">
+            <div></div>
+            <div>
+                <p>Nulla facilisi. Duis aliquet egestas purus in blandit. Curabitur vulputate , ligula lacinia
+                    celerisque tempor, lacus lacus ornare ante. Ac egestas est urna sit amet arcu. consequat posuere.
+                    Vestibulum ante ipsum primis in faucibus orci luctus et ultrices posuere. Nulla facilisi. Duis
+                    aliquet egestas purus in blandit. Curabitur vulputate , ligula lacinia celerisque tempor, lacus
+                    lacus ornare ante.
+                </p>
+                <p>This is how a link looks like. Class aptent taciti sociosqu ad litora torquent per conubia nostra,
+                    per inceptos himenaeos. Sed molestie augue sit amet leo consequat posuere. Vestibulum ante ipsum
+                    primis in faucibus la lacinia celerisque tempor, lacus lacus ornare ante
+                </p>
+                <p>orci luctus et ultrices posuere.Class aptent taciti sociosqu ad litora torquent per conubia nostra,
+                    per</p>
+            </div>
+        </div>
+        <div class="third-section-text-box">
+            <p>Nulla facilisi. Duis aliquet egestas purus in blandit. Curabitur vulputate , ligula lacinia celerisque
+                tempor, lacus lacus ornare ante. Ac egestas est urna sit amet arcu. consequat posuere. Vestibulum ante
+                ipsum primis in faucibus orci luctus et ultrices posuere. Nulla facilisi. Duis aliquet egestas purus in
+                blandit. Curabitur vulputate , ligula lacinia celerisque tempor, lacus lacus ornare ante.
+            </p>
+            <p>This is how a link looks like. Class aptent taciti sociosqu ad litora torquent per conubia nostra, per
+                inceptos himenaeos. Sed molestie augue sit amet leo consequat posuere. Vestibulum ante ipsum primis in
+                faucibus la lacinia celerisque tempor, lacus lacus ornare ante
+                orci luctus et ultrices posuere.Class aptent taciti sociosqu ad litora torquent per conubia nostra, per
+                inceptos himenaeos. Sed molestie augue sit amet leo consequat posuere. Vestibulum ante ipsum primis in
+                faucibus
+            </p>
+            <button>READ MORE</button>
+        </div>
     </section>
     <section class="gallery-section container">
         <!-- Images used to open the lightbox -->
-        <div class="row">
-            <div class="column">
-                <img src="assets/beach-sea-coast-water-ocean-horizon-15529-pxhere.com.jpg"
-                    onclick="openModal();currentSlide(1)" class="hover-shadow">
-            </div>
-            <div class="column">
-                <img src="assets/fotolia_170367715.png" onclick="openModal();currentSlide(2)" class="hover-shadow">
-            </div>
-            <div class="column">
-                <img src="assets/grass-field-farm-lawn-meadow-hill-736197-pxhere.com.jpg"
-                    onclick="openModal();currentSlide(3)" class="hover-shadow">
-            </div>
-            <div class="column">
-                <img src="assets/hand-outdoor-sand-morning-animal-horse-114552-pxhere.com.jpg"
-                    onclick="openModal();currentSlide(4)" class="hover-shadow">
-            </div>
-            <div class="column">
-                <img src="assets/landscape-nature-grass-horizon-wilderness-mountain-946977-pxhere.com.jpg"
-                    onclick="openModal();currentSlide(5)" class="hover-shadow">
-            </div>
-            <div class="column">
-                <img src="assets/landscape-sea-coast-horizon-mountain-snow-1325243-pxhere.com.jpg"
-                    onclick="openModal();currentSlide(6)" class="hover-shadow">
-            </div>
-            <div class="column">
-                <img src="assets/landscape-sea-nature-ocean-mountain-sky-386319-pxhere.com.jpg"
-                    onclick="openModal();currentSlide(7)" class="hover-shadow">
-            </div>
-            <div class="column">
-                <img src="assets/landscape-tree-horizon-mountain-cloud-plant-1410556-pxhere.com.png"
-                    onclick="openModal();currentSlide(8)" class="hover-shadow">
-            </div>
-            <div class="column">
-                <img src="assets/sea-coast-water-ocean-bird-animal-136776-pxhere.com.jpg"
-                    onclick="openModal();currentSlide(9)" class="hover-shadow">
-            </div>
-            <div class="column">
-                <img src="assets/seacost.jpg" onclick="openModal();currentSlide(10)" class="hover-shadow">
-            </div>
-            <div class="column">
-                <img src="assets/snow-winter-city-vehicle-church-iceland-836962-pxhere.com.jpg"
-                    onclick="openModal();currentSlide(11)" class="hover-shadow">
-            </div>
+        <div class="column">
+            <img src="assets/beach-sea-coast-water-ocean-horizon-15529-pxhere.com.jpg"
+                onclick="openModal();currentSlide(1)" class="hover-shadow">
+        </div>
+        <div class="column">
+            <img src="assets/fotolia_170367715.png" onclick="openModal();currentSlide(2)" class="hover-shadow">
+        </div>
+        <div class="column">
+            <img src="assets/grass-field-farm-lawn-meadow-hill-736197-pxhere.com.jpg"
+                onclick="openModal();currentSlide(3)" class="hover-shadow">
+        </div>
+        <div class="column">
+            <img src="assets/hand-outdoor-sand-morning-animal-horse-114552-pxhere.com.jpg"
+                onclick="openModal();currentSlide(4)" class="hover-shadow">
+        </div>
+        <div class="column">
+            <img src="assets/landscape-nature-grass-horizon-wilderness-mountain-946977-pxhere.com.jpg"
+                onclick="openModal();currentSlide(5)" class="hover-shadow">
+        </div>
+        <div class="column">
+            <img src="assets/landscape-sea-coast-horizon-mountain-snow-1325243-pxhere.com.jpg"
+                onclick="openModal();currentSlide(6)" class="hover-shadow">
+        </div>
+        <div class="column">
+            <img src="assets/landscape-sea-nature-ocean-mountain-sky-386319-pxhere.com.jpg"
+                onclick="openModal();currentSlide(7)" class="hover-shadow">
+        </div>
+        <div class="column">
+            <img src="assets/sea-coast-water-ocean-bird-animal-136776-pxhere.com.jpg"
+                onclick="openModal();currentSlide(8)" class="hover-shadow">
+        </div>
+
+        <div class="column">
+            <img src="assets/snow-winter-city-vehicle-church-iceland-836962-pxhere.com.jpg"
+                onclick="openModal();currentSlide(9)" class="hover-shadow">
         </div>
 
         <!-- The Modal/Lightbox -->
@@ -90,60 +156,49 @@
             <div class="modal-content">
 
                 <div class="mySlides">
-                    <div class="numbertext">1 / 11</div>
+                    <div class="numbertext">1 / 9</div>
                     <img src="assets/beach-sea-coast-water-ocean-horizon-15529-pxhere.com.jpg" style="width:100%">
                 </div>
 
                 <div class="mySlides">
-                    <div class="numbertext">2 / 11</div>
+                    <div class="numbertext">2 / 9</div>
                     <img src="assets/fotolia_170367715.png" style="width:100%">
                 </div>
 
                 <div class="mySlides">
-                    <div class="numbertext">3 / 11</div>
+                    <div class="numbertext">3 / 9</div>
                     <img src="assets/grass-field-farm-lawn-meadow-hill-736197-pxhere.com.jpg" style="width:100%">
                 </div>
 
                 <div class="mySlides">
-                    <div class="numbertext">4 / 11</div>
+                    <div class="numbertext">4 / 9</div>
                     <img src="assets/hand-outdoor-sand-morning-animal-horse-114552-pxhere.com.jpg" style="width:100%">
                 </div>
 
                 <div class="mySlides">
-                    <div class="numbertext">5 / 11</div>
+                    <div class="numbertext">5 / 9</div>
                     <img src="assets/landscape-nature-grass-horizon-wilderness-mountain-946977-pxhere.com.jpg"
                         style="width:100%">
                 </div>
 
                 <div class="mySlides">
-                    <div class="numbertext">6 / 11</div>
+                    <div class="numbertext">6 / 9</div>
                     <img src="assets/landscape-sea-coast-horizon-mountain-snow-1325243-pxhere.com.jpg"
                         style="width:100%">
                 </div>
 
                 <div class="mySlides">
-                    <div class="numbertext">7 / 11</div>
+                    <div class="numbertext">7 / 9</div>
                     <img src="assets/landscape-sea-nature-ocean-mountain-sky-386319-pxhere.com.jpg" style="width:100%">
                 </div>
 
                 <div class="mySlides">
-                    <div class="numbertext">8 / 11</div>
-                    <img src="assets/landscape-tree-horizon-mountain-cloud-plant-1410556-pxhere.com.png"
-                        style="width:100%">
-                </div>
-
-                <div class="mySlides">
-                    <div class="numbertext">9 / 11</div>
+                    <div class="numbertext">8 / 9</div>
                     <img src="assets/sea-coast-water-ocean-bird-animal-136776-pxhere.com.jpg" style="width:100%">
                 </div>
 
                 <div class="mySlides">
-                    <div class="numbertext">10 / 11</div>
-                    <img src="assets/seacost.jpg" style="width:100%">
-                </div>
-
-                <div class="mySlides">
-                    <div class="numbertext">11 / 11</div>
+                    <div class="numbertext">9 / 9</div>
                     <img src="assets/snow-winter-city-vehicle-church-iceland-836962-pxhere.com.jpg" style="width:100%">
                 </div>
 
@@ -154,7 +209,12 @@
             </div>
         </div>
     </section>
-
+    <section class="footer">
+        <div>
+            <p>All right reserved</p>
+            <p>Grass Studio</p>
+        </div>
+    </section>
     <script src="scripts.js"></script>
 
 </body>
