--- a/index.html
+++ b/index.html
@@ -29,12 +29,12 @@
                 </li>
                 <li><a href="#">Trips</a></li>
                 <li class="dropdown">
-                    <a href="#" class="dropbtn">Gallery</a>
+                    <a href="#gallery-section" class="dropbtn">Gallery</a>
                     <div class="dropdown-content dropdown-gallery">
-                        <a href="#">Iceland</a>
-                        <a href="#">Norway</a>
-                        <a href="#">Arctica</a>
-                        <a href="#">Alaska</a>
+                        <a href="#gallery-section">Iceland</a>
+                        <a href="#gallery-section">Norway</a>
+                        <a href="#gallery-section">Arctica</a>
+                        <a href="#gallery-section">Alaska</a>
                     </div>
                 </li>
                 <li><a href="#">Blog</a></li>
@@ -111,7 +111,7 @@
             <button>READ MORE</button>
         </div>
     </section>
-    <section class="gallery-section container">
+    <section id="gallery-section" class="gallery-section container">
         <!-- Images used to open the lightbox -->
         <div class="column">
             <img src="assets/beach-sea-coast-water-ocean-horizon-15529-pxhere.com.jpg"
