--- a/index.html
+++ b/index.html
@@ -6,7 +6,7 @@
     <meta charset="utf-8" />
 
 </head>
-<link rel="stylesheet" href="./css/main.css">
+<link rel="stylesheet" href="./src/css/main.css">
 <link rel="preconnect" href="https://fonts.googleapis.com">
 <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
 <link href="https://fonts.googleapis.com/css2?family=Open+Sans:wght@300;400;600;700&display=swap" rel="stylesheet">
@@ -114,39 +114,39 @@
     <section id="gallery-section" class="gallery-section container">
         <!-- Images used to open the lightbox -->
         <div class="column">
-            <img src="assets/beach-sea-coast-water-ocean-horizon-15529-pxhere.com.jpg"
+            <img src="./src/assets/beach-sea-coast-water-ocean-horizon-15529-pxhere.com.jpg"
                 onclick="openModal();currentSlide(1)" class="hover-shadow">
         </div>
         <div class="column">
-            <img src="assets/fotolia_170367715.png" onclick="openModal();currentSlide(2)" class="hover-shadow">
+            <img src="./src/assets/fotolia_170367715.png" onclick="openModal();currentSlide(2)" class="hover-shadow">
         </div>
         <div class="column">
-            <img src="assets/grass-field-farm-lawn-meadow-hill-736197-pxhere.com.jpg"
+            <img src="./src/assets/grass-field-farm-lawn-meadow-hill-736197-pxhere.com.jpg"
                 onclick="openModal();currentSlide(3)" class="hover-shadow">
         </div>
         <div class="column">
-            <img src="assets/hand-outdoor-sand-morning-animal-horse-114552-pxhere.com.jpg"
+            <img src="./src/assets/hand-outdoor-sand-morning-animal-horse-114552-pxhere.com.jpg"
                 onclick="openModal();currentSlide(4)" class="hover-shadow">
         </div>
         <div class="column">
-            <img src="assets/landscape-nature-grass-horizon-wilderness-mountain-946977-pxhere.com.jpg"
+            <img src="./src/assets/landscape-nature-grass-horizon-wilderness-mountain-946977-pxhere.com.jpg"
                 onclick="openModal();currentSlide(5)" class="hover-shadow">
         </div>
         <div class="column">
-            <img src="assets/landscape-sea-coast-horizon-mountain-snow-1325243-pxhere.com.jpg"
+            <img src="./src/assets/landscape-sea-coast-horizon-mountain-snow-1325243-pxhere.com.jpg"
                 onclick="openModal();currentSlide(6)" class="hover-shadow">
         </div>
         <div class="column">
-            <img src="assets/landscape-sea-nature-ocean-mountain-sky-386319-pxhere.com.jpg"
+            <img src="./src/assets/landscape-sea-nature-ocean-mountain-sky-386319-pxhere.com.jpg"
                 onclick="openModal();currentSlide(7)" class="hover-shadow">
         </div>
         <div class="column">
-            <img src="assets/sea-coast-water-ocean-bird-animal-136776-pxhere.com.jpg"
+            <img src="./src/assets/sea-coast-water-ocean-bird-animal-136776-pxhere.com.jpg"
                 onclick="openModal();currentSlide(8)" class="hover-shadow">
         </div>
 
         <div class="column">
-            <img src="assets/snow-winter-city-vehicle-church-iceland-836962-pxhere.com.jpg"
+            <img src="./src/assets/snow-winter-city-vehicle-church-iceland-836962-pxhere.com.jpg"
                 onclick="openModal();currentSlide(9)" class="hover-shadow">
         </div>
 
@@ -157,49 +157,49 @@
 
                 <div class="mySlides">
                     <div class="numbertext">1 / 9</div>
-                    <img src="assets/beach-sea-coast-water-ocean-horizon-15529-pxhere.com.jpg" style="width:100%">
+                    <img src="./src/assets/beach-sea-coast-water-ocean-horizon-15529-pxhere.com.jpg" style="width:100%">
                 </div>
 
                 <div class="mySlides">
                     <div class="numbertext">2 / 9</div>
-                    <img src="assets/fotolia_170367715.png" style="width:100%">
+                    <img src="./src/assets/fotolia_170367715.png" style="width:100%">
                 </div>
 
                 <div class="mySlides">
                     <div class="numbertext">3 / 9</div>
-                    <img src="assets/grass-field-farm-lawn-meadow-hill-736197-pxhere.com.jpg" style="width:100%">
+                    <img src="./src/assets/grass-field-farm-lawn-meadow-hill-736197-pxhere.com.jpg" style="width:100%">
                 </div>
 
                 <div class="mySlides">
                     <div class="numbertext">4 / 9</div>
-                    <img src="assets/hand-outdoor-sand-morning-animal-horse-114552-pxhere.com.jpg" style="width:100%">
+                    <img src="./src/assets/hand-outdoor-sand-morning-animal-horse-114552-pxhere.com.jpg" style="width:100%">
                 </div>
 
                 <div class="mySlides">
                     <div class="numbertext">5 / 9</div>
-                    <img src="assets/landscape-nature-grass-horizon-wilderness-mountain-946977-pxhere.com.jpg"
+                    <img src="./src/assets/landscape-nature-grass-horizon-wilderness-mountain-946977-pxhere.com.jpg"
                         style="width:100%">
                 </div>
 
                 <div class="mySlides">
                     <div class="numbertext">6 / 9</div>
-                    <img src="assets/landscape-sea-coast-horizon-mountain-snow-1325243-pxhere.com.jpg"
+                    <img src="./src/assets/landscape-sea-coast-horizon-mountain-snow-1325243-pxhere.com.jpg"
                         style="width:100%">
                 </div>
 
                 <div class="mySlides">
                     <div class="numbertext">7 / 9</div>
-                    <img src="assets/landscape-sea-nature-ocean-mountain-sky-386319-pxhere.com.jpg" style="width:100%">
+                    <img src="./src/assets/landscape-sea-nature-ocean-mountain-sky-386319-pxhere.com.jpg" style="width:100%">
                 </div>
 
                 <div class="mySlides">
                     <div class="numbertext">8 / 9</div>
-                    <img src="assets/sea-coast-water-ocean-bird-animal-136776-pxhere.com.jpg" style="width:100%">
+                    <img src="./src/assets/sea-coast-water-ocean-bird-animal-136776-pxhere.com.jpg" style="width:100%">
                 </div>
 
                 <div class="mySlides">
                     <div class="numbertext">9 / 9</div>
-                    <img src="assets/snow-winter-city-vehicle-church-iceland-836962-pxhere.com.jpg" style="width:100%">
+                    <img src="./src/assets/snow-winter-city-vehicle-church-iceland-836962-pxhere.com.jpg" style="width:100%">
                 </div>
 
                 <!-- Next/previous controls -->
@@ -215,7 +215,7 @@
             <p>Grass Studio</p>
         </div>
     </section>
-    <script src="scripts.js"></script>
+    <script src="src/scripts.js"></script>
 
 </body>
 
