Fix: change mediaqueries, done mobile version

--- a/index.html
+++ b/index.html
@@ -218,8 +218,7 @@
             <p>Grass Studio</p>
         </div>
         </section>
-        <footer src="src/scripts.js">
-            </script>
+        <script src="src/scripts.js"></script>
 
 </body>
 
